# argus

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  agents.md  docker-compose.yaml  physical_pipeline_plan.md  piece_projection_refactor_plan.md  progress.md  pyproject.toml  pyrightconfig.json  rl.md
.claude/: launch.json
autoresearch/: best_result.json  best_result_rectified_v0.json  best_train_rectified_v0.py  controller.sh  controller_slow.sh  prepare.py  program.md  pyproject.toml  results.tsv  results_rectified_v0.tsv  train.py
blender/: render_chess.py  render_server.py
configs/: config.yaml
dev-tools/: Dockerfile.api  entrypoint.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: cuda_migration_guide.md
pipeline/: __init__.py  __main__.py  cli.py  paths.py  requirements.txt  runtime_assets.py
scripts/: audit_annotations.py  backup.sh  build_physical_board_probe_ensemble.py  check_backup.sh  compare_chesscog_baseline.py  diagnose_classifier_val.py  diagnose_overlay.py  download_model.py  eval_chess_positions.py  eval_mixed_stack.py  eval_physical_board_runtime.py  eval_physical_board_tracker.py  eval_physical_move_model.py  eval_two_stage_board_reader.py  evaluate.py  export_physical_real_board_dataset.py  export_two_stage_training_run_inputs.py  generate_data.py  infer.py  migrate_annotations_to_native_res.py  migrate_storage.py  prepare_direct_board_reader_dataset.py  prepare_square_classifier_dataset.py  study1_architecture.py  study2_geometry.py  train.py  (+18 more)
(+705 files in other folders)
